cert/ingresswithcert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.akdev.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
      - path: /phpmyadmin
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
  tls:
  - hosts:
    - k8s.akdev.live
    secretName: letsencrypt-cert-tls
